# Haudy

./: .gitignore  PRODUCT_ROADMAP.md  README.md  build_windows.bat  index.html  package.json  pnpm-lock.yaml  render.yaml  tailwind.config.js
.github/workflows/: ci.yml  desktop-packages.yml
docs/: HAUDY_IT_ENGINEERING_HANDBOOK.md  HAUDY_USER_OPERATION_MANUAL.md  desktop-packaging.md  windows-standalone-build.md
public/: manifest.webmanifest  sw.js
scripts/: build-past-reports-db.py
src/: App.tsx  index.css  main.tsx  register-service-worker.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AuditEmailDialog.tsx  AuditorGate.tsx  AuditorReportDatabase.tsx  CertificateSummary.tsx  CsisDefectList.tsx  DeviceTestSection.tsx  DictationNotes.tsx  DocumentationSection.tsx  InstallationSection.tsx  LocalAuthGate.tsx  OperatingHelp.tsx  PatchUpdateDialog.tsx  PhotoCapture.tsx  ReportFindingFields.tsx  SignalLogSection.tsx  StatusButtons.tsx  UlHeader.tsx  UploadDialog.tsx
src/data/: auditor-report-findings.json  csis-defects.json  findings.ts
src/hooks/: use-auditor.ts  use-audits.ts  use-dictation.ts  use-toast.ts
src/lib/: asc-documents.ts  asc-groups.ts  asc-profile.ts  audit-assignments.ts  audit-duplicates.ts  audit-program.ts  audit-storage.ts  auditor-report-findings.ts  certificate-parser.ts  csis-defects.ts  customer-contacts.ts  desktop-bridge.ts  desktop-runtime.ts  docx-extract.ts  export-csv.ts  field-note-progress.ts  ihaudy-transfer.ts  (+11 more)
(+16 files in other folders)
