[package]
name = "haudy"
version = "1.4.1"
description = "Haudy Audit Suite desktop app"
authors = ["Haudy"]
edition = "2021"

[lib]
name = "haudy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
rfd = "0.15"
pdf-extract = "0.12"
calamine = "0.24"
